syntax = "proto3";

package filesystem;

option go_package = "github.com/xerpa-ai/e2b-go/internal/proto/filesystem;filesystempb";

import "google/protobuf/timestamp.proto";

// FileType represents the type of filesystem object
enum FileType {
  FILE_TYPE_UNSPECIFIED = 0;
  FILE_TYPE_FILE = 1;
  FILE_TYPE_DIRECTORY = 2;
}

// EventType represents the type of filesystem event
enum EventType {
  EVENT_TYPE_UNSPECIFIED = 0;
  EVENT_TYPE_CREATE = 1;
  EVENT_TYPE_WRITE = 2;
  EVENT_TYPE_REMOVE = 3;
  EVENT_TYPE_RENAME = 4;
  EVENT_TYPE_CHMOD = 5;
}

// EntryInfo contains metadata about a file or directory
message EntryInfo {
  string name = 1;
  FileType type = 2;
  string path = 3;
  int64 size = 4;
  uint32 mode = 5;
  string permissions = 6;
  string owner = 7;
  string group = 8;
  google.protobuf.Timestamp modified_time = 9;
  optional string symlink_target = 10;
}

// MoveRequest is the request for moving/renaming a file or directory
message MoveRequest {
  string source = 1;
  string destination = 2;
}

// MoveResponse is the response for moving/renaming a file or directory
message MoveResponse {
  EntryInfo entry = 1;
}

// MakeDirRequest is the request for creating a directory
message MakeDirRequest {
  string path = 1;
}

// MakeDirResponse is the response for creating a directory
message MakeDirResponse {
  EntryInfo entry = 1;
}

// RemoveRequest is the request for removing a file or directory
message RemoveRequest {
  string path = 1;
}

// RemoveResponse is the response for removing a file or directory
message RemoveResponse {}

// StatRequest is the request for getting file/directory information
message StatRequest {
  string path = 1;
}

// StatResponse is the response for getting file/directory information
message StatResponse {
  EntryInfo entry = 1;
}

// ListDirRequest is the request for listing directory contents
message ListDirRequest {
  string path = 1;
  uint32 depth = 2;
}

// ListDirResponse is the response for listing directory contents
message ListDirResponse {
  repeated EntryInfo entries = 1;
}

// WatchDirRequest is the request for watching a directory
message WatchDirRequest {
  string path = 1;
  bool recursive = 2;
}

// FilesystemEvent represents a filesystem change event
message FilesystemEvent {
  string name = 1;
  EventType type = 2;
}

// WatchDirResponse is the response for watching a directory (streaming)
message WatchDirResponse {
  oneof event {
    StartEvent start = 1;
    FilesystemEvent filesystem = 2;
    KeepAlive keepalive = 3;
  }

  message StartEvent {}
  message KeepAlive {}
}

// CreateWatcherRequest is the request for creating a non-streaming watcher
message CreateWatcherRequest {
  string path = 1;
  bool recursive = 2;
}

// CreateWatcherResponse is the response for creating a non-streaming watcher
message CreateWatcherResponse {
  string watcher_id = 1;
}

// GetWatcherEventsRequest is the request for getting watcher events
message GetWatcherEventsRequest {
  string watcher_id = 1;
}

// GetWatcherEventsResponse is the response for getting watcher events
message GetWatcherEventsResponse {
  repeated FilesystemEvent events = 1;
}

// RemoveWatcherRequest is the request for removing a watcher
message RemoveWatcherRequest {
  string watcher_id = 1;
}

// RemoveWatcherResponse is the response for removing a watcher
message RemoveWatcherResponse {}

// Filesystem service provides filesystem operations
service Filesystem {
  // Stat returns information about a file or directory
  rpc Stat(StatRequest) returns (StatResponse);
  
  // MakeDir creates a directory
  rpc MakeDir(MakeDirRequest) returns (MakeDirResponse);
  
  // Move renames or moves a file or directory
  rpc Move(MoveRequest) returns (MoveResponse);
  
  // ListDir lists the contents of a directory
  rpc ListDir(ListDirRequest) returns (ListDirResponse);
  
  // Remove removes a file or directory
  rpc Remove(RemoveRequest) returns (RemoveResponse);
  
  // WatchDir watches a directory for changes (streaming)
  rpc WatchDir(WatchDirRequest) returns (stream WatchDirResponse);
  
  // CreateWatcher creates a non-streaming watcher
  rpc CreateWatcher(CreateWatcherRequest) returns (CreateWatcherResponse);
  
  // GetWatcherEvents gets events from a watcher
  rpc GetWatcherEvents(GetWatcherEventsRequest) returns (GetWatcherEventsResponse);
  
  // RemoveWatcher removes a watcher
  rpc RemoveWatcher(RemoveWatcherRequest) returns (RemoveWatcherResponse);
}
